# ChangeLog for dev-python/pretty-yaml
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pretty-yaml/ChangeLog,v 1.4 2015/06/07 15:18:05 jlec Exp $

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

  30 Jun 2014; Mike Gilbert <floppym@gentoo.org> pretty-yaml-14.05.7.ebuild:
  Depend on setuptools.

*pretty-yaml-14.05.7 (12 Jun 2014)

  12 Jun 2014; Patrick McLean <chutzpah@gentoo.org>
  +pretty-yaml-14.05.7.ebuild, +metadata.xml:
  Initial commit.