@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pretty-yaml
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pretty-yaml/ChangeLog,v 1.4 2015/06/07 15:18:05 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pretty-yaml/ChangeLog,v 1.5 2015/07/01 06:54:17 idella4 Exp $
+
+*pretty-yaml-15.5.7 (01 Jul 2015)
+
+  01 Jul 2015; Ian Delaney <idella4@gentoo.org> +pretty-yaml-15.5.7.ebuild:
+  bump; add test phase
 
   07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add github to remote-id in metadata.xml
